@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: driverio.c,v 1.35.2.14.4.2.2.5.2.4 2005/03/16 18:15:28 martinea Exp $
+ * $Id: driverio.c,v 1.35.2.14.4.2.2.5.2.5 2005/09/12 13:39:55 martinea Exp $
  *
  * I/O-related functions for driver program
  */
@@ -563,15 +563,17 @@ void update_info_dumper(dp, origsize, dumpsize, dumptime)
 	info.consecutive_runs = 1;
     }
 
-    for(i=NB_HISTORY-1;i>0;i--) {
-	info.history[i] = info.history[i-1];
-    }
+    if(origsize >=0 && dumpsize >=0) {
+	for(i=NB_HISTORY-1;i>0;i--) {
+	    info.history[i] = info.history[i-1];
+	}
 
-    info.history[0].level = level;
-    info.history[0].size  = origsize;
-    info.history[0].csize = dumpsize;
-    info.history[0].date  = sched(dp)->timestamp;
-    info.history[0].secs  = dumptime;
+	info.history[0].level = level;
+	info.history[0].size  = origsize;
+	info.history[0].csize = dumpsize;
+	info.history[0].date  = sched(dp)->timestamp;
+	info.history[0].secs  = dumptime;
+    }
 
     if(put_info(dp->host->hostname, dp->name, &info))
 	error("infofile update failed (%s,%s)\n", dp->host->hostname, dp->name);
