@@ -1,4 +1,8 @@
-2005-09-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+2005-09-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* server-src/driverio.c: Don't save history with size < 0.
+
+2005-09-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 	Patch by Geert Uytterhoeven <geert@linux-m68k.org>
 
 	* server-src/planner.c: Don't use history with size < 0.
